--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Vladilen CV</title>
+    <title>Azanov CV</title>
   </head>
   <body>
     <table cellspacing="15">
       <tr>
         <td>
-          <img src="avatar.jpeg" width="200" alt="тут моя фотка" />
+          <img src="avatarAZ.jpg" width="200" alt="тут моя фотка" />
         </td>
         <td>
-          <h1>Владилен Минин</h1>
-          <p><em>Я основатель одноименного <strong>Youtube канала</strong></em></p>
+          <h1>Азанов Станислав</h1>
+          <p><em>Я хозяин собаки <strong>Рейчел</strong></em></p>
           <p>Я люблю путешестовать, заниматься спортом и программировать</p>
         </td>
       </tr>
@@ -22,17 +22,17 @@
 
     <h2>Мои социальные сети</h2>
     <ul>
-      <li><a href="https://instagram.com/vladilen.minin" target="_blank">Instagram</a></li>
-      <li><a target="_blank" href="https://t.me/js_by_vladilen">Telegram</a></li>
+      <li><a href="https://instagram.com/az_extazi" target="_blank">Instagram</a></li>
+      <li><a target="_blank" href="https://t.me/azancheg">Telegram</a></li>
     </ul>
 
     <hr>
 
     <h2>Мои хобби</h2>
     <ol>
-      <li>Блоггер</li>
-      <li>Быстрая езда на машинах</li>
-      <li>Спорт: ММА, лыжи</li>
+      <li>SK8</li>
+      <li>Алтимат Фрисби</li>
+      <li>Фантастика</li>
       <li>Путешествия</li>
     </ol>
 
@@ -46,14 +46,14 @@
         <th>Год</th>
       </tr>
       <tr>
-        <td>EPAM</td>
-        <td>Software Engineer</td>
-        <td>2016 - 2017</td>
+        <td>БентИзол</td>
+        <td>Инженер-конструкто</td>
+        <td>2017 - 2022</td>
       </tr>
       <tr>
-        <td>Software Outsorcing Services</td>
-        <td>Lead Frontend</td>
-        <td>2017 - 2019</td>
+        <td>МАИ</td>
+        <td>Frontend Engineer</td>
+        <td>2022 - н.в.</td>
       </tr>
     </table>
 
